--- a/1VRA/frontend/index.html
+++ b/1VRA/frontend/index.html
@@ -23,7 +23,7 @@
                 <li class="active" data-tab="indicators">Indicators Calculator</li>
                 <li data-tab="volatility">2. Volatility & Labels</li>
                 <li data-tab="clustering">3. DBSCAN Clustering</li>
-                <li class="disabled">Risk Analysis (Coming Soon)</li>
+                <li data-tab="mltraining">4. ML Training</li>
                 <li class="disabled">Backtesting (Coming Soon)</li>
             </ul>
         </nav>
@@ -263,6 +263,123 @@ High risk = > 66th percentile</textarea>
                     </div>
                 </div>
             </div>
+
+            <!-- ML Training Tab -->
+            <div id="mltraining" class="tab-content hidden">
+                <header class="tab-header">
+                    <h1>ML Training & Stats</h1>
+                    <p>Train models to predict future volatility and evaluate classification performance.</p>
+                </header>
+
+                <div class="card">
+                    <h3>1. Configuration</h3>
+                    <div class="file-upload-container" style="flex-wrap: wrap;">
+                        <div class="row" style="width: 100%;">
+                            <div class="input-group" style="flex: 1;">
+                                <label>Algorithm</label>
+                                <select id="mlAlgorithm" class="input-select">
+                                    <option value="linear_regression">Linear Regression</option>
+                                    <option value="future_model" disabled>More Models (Coming Soon)</option>
+                                </select>
+                            </div>
+                            <div class="input-group" style="flex: 1;">
+                                <label>Validation Strategy</label>
+                                <select id="mlValidation" class="input-select">
+                                    <option value="rolling">Rolling Window Validation</option>
+                                    <option value="walk_forward">Walk-Forward (Expanding) Validation</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row" style="width: 100%; margin-top: 12px;">
+                            <div class="input-group" style="flex: 2;">
+                                <label>Input File (Labeled Volatility Data)</label>
+                                <div class="row">
+                                    <input type="text" id="mlInputPath" class="input-text"
+                                        placeholder="Path to LBL_VOL_... file">
+                                    <label for="mlCsvFile" class="btn small">Browse</label>
+                                    <input type="file" id="mlCsvFile" accept=".csv" hidden>
+                                </div>
+                            </div>
+                            <div class="input-group" id="mlWindowGroup">
+                                <label id="mlWindowLabel">Window Size (segments)</label>
+                                <input type="number" id="mlWindowSize" class="input-number" value="6" min="2" max="20">
+                                <small style="color: var(--text-muted); font-size: 0.8em;" id="mlWindowHint">Train on N
+                                    segments, test on next</small>
+                            </div>
+                        </div>
+                        <div style="width: 100%; margin-top: 12px;">
+                            <button id="mlTrainBtn" class="btn primary">Start Training</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card" style="margin-top: 0;">
+                    <h3>Validation Strategy Description</h3>
+                    <textarea id="mlValidationDesc" class="desc-box" readonly>Rolling Window: Train on a fixed-size window (e.g., segments 1–6), test on segment 7.
+Then roll forward: train on segments 2–7, test on segment 8, and so on.
+Collects performance metrics across all test windows.</textarea>
+                </div>
+
+                <div class="grid-container">
+                    <div class="card log-section">
+                        <h3>2. Training Logs</h3>
+                        <div id="mlServerLogs" class="log-window">
+                            <div class="log-entry system">Ready for ML training.</div>
+                        </div>
+                    </div>
+
+                    <div class="card parameters-section">
+                        <h3>Regression Metrics</h3>
+                        <ul class="params-list" id="mlMetricsList">
+                            <li>Waiting for training...</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card hidden" id="mlClassificationCard">
+                    <h3>3. Classification Metrics</h3>
+                    <div class="row" style="gap: 24px; align-items: flex-start;">
+                        <div style="flex: 1;">
+                            <ul class="params-list" id="mlClassMetricsList"></ul>
+                        </div>
+                        <div style="flex: 0 0 auto;">
+                            <button id="mlConfusionBtn" class="btn primary" style="background: var(--primary);">Show
+                                Confusion Matrix</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card hidden" id="mlFoldsCard">
+                    <h3>4. Fold Results</h3>
+                    <div class="table-wrapper">
+                        <table id="mlFoldsTable">
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="card hidden" id="mlFilesCard">
+                    <h3>5. Saved Files</h3>
+                    <ul class="params-list" id="mlFilesList"></ul>
+                </div>
+            </div>
+
+            <!-- Confusion Matrix Modal -->
+            <div id="cmModal" class="modal-overlay hidden">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2>Confusion Matrix</h2>
+                        <button id="cmModalClose" class="btn small"
+                            style="font-size: 1.2rem; padding: 4px 12px;">&times;</button>
+                    </div>
+                    <div id="cmBody" class="cm-body">
+                        <!-- Will be populated by JS -->
+                    </div>
+                    <div id="cmLegend" class="cm-legend"></div>
+                </div>
+            </div>
+
         </main>
     </div>
     <script src="app.js"></script>
