--- a/1VRA/frontend/index.html
+++ b/1VRA/frontend/index.html
@@ -281,6 +281,8 @@ High risk = > 66th percentile</textarea>
                                 <select id="mlAlgorithm" class="input-select">
                                     <option value="linear_regression">Linear Regression</option>
                                     <option value="xgboost">XGBoost (Regressor)</option>
+                                    <option value="lstm">LSTM (Deep Learning)</option>
+                                    <option value="random_forest">Random Forest (Regressor)</option>
                                 </select>
                             </div>
                             <div class="input-group" style="flex: 1;">
@@ -426,6 +428,8 @@ Collects performance metrics across all test windows.</textarea>
                                 <select id="hybridAlgorithm" class="input-select">
                                     <option value="linear_regression">Linear Regression</option>
                                     <option value="xgboost">XGBoost (Regressor)</option>
+                                    <option value="lstm">LSTM (Deep Learning)</option>
+                                    <option value="random_forest">Random Forest (Regressor)</option>
                                 </select>
                             </div>
                             <div class="input-group" style="flex: 1;">
